--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container">
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active p-5">
+          <div class="carousel-item active">
             <div class="row bg-info p-5 bg-info bg-gradient d-flex align-items-center">
               <div class="col-lg-7">
                 <h1>Cool Dude Headphone</h1>
@@ -69,7 +69,7 @@
               </div>
             </div>
           </div>
-          <div class="carousel-item p-5">
+          <div class="carousel-item">
             <div class="row bg-info p-5 bg-info bg-gradient d-flex align-items-center">
               <div class="col-lg-7">
                 <h1>X-Box for your living room</h1>
@@ -97,7 +97,114 @@
     </div>
   </header>
   <!-- header end -->
-  <main></main>
+  <main>
+    <section class="container my-5">
+      <div class="row g-4">
+        <div class="col-lg-4">
+          <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
+            <h1 class="text-white">Watch</h1>
+            <img src="images/categories/watch.png" alt="">
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="p-3 border bg-success d-flex align-items-center justify-content-between rounded-3">
+            <h1 class="text-white">Bag</h1>
+            <img src="images/categories/bag.png" alt="">
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="p-3 border bg-primary d-flex align-items-center justify-content-between rounded-3">
+            <h1 class="text-white">Shoes</h1>
+            <img src="images/categories/shoes.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="container">
+      <h2>Shoes</h2>
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        <div class="col">
+          <div class="card border-0 shadow-lg h-100">
+            <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Suoply 350</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+            </div>
+            <div class="m-3">
+              <button class="btn btn-warning">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card border-0 shadow-lg h-100">
+            <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Nike 360</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+            </div>
+            <div class="m-3">
+              <button class="btn btn-warning">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card border-0 shadow-lg h-100">
+            <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Red Airmax</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+            </div>
+            <div class="m-3">
+              <button class="btn btn-warning">Buy Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="container mt-5">
+      <h2>Backpack</h2>
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        <div class="col">
+          <div class="card border-0 shadow-lg h-100">
+            <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Red Laltu Bag</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            <div class="m-3">
+              <button class="btn btn-warning">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card border-0 shadow-lg h-100">
+            <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Blue Niltu Bag</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+            </div>
+            <div class="m-3">
+              <button class="btn btn-warning">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card border-0 shadow-lg h-100">
+            <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Black Kaltu Bag
+              </h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            </div>
+            <div class="m-3">
+              <button class="btn btn-warning">Buy Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+  <!-- main area end -->
   <footer></footer>
   
   <!-- bootstrap script -->
